ros2_truckplatoon/log/build_2022-10-30_17-36-06/truck/stderr.log
In file included from /Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:1:
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.hpp:4:10: warning: non-portable path to file '"utils/include.hpp"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "utils/Include.hpp"
         ^~~~~~~~~~~~~~~~~~~
         "utils/include.hpp"
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:21:18: error: too few arguments to function call, expected at least 2, have 0
    rclcpp::init()
    ~~~~~~~~~~~~ ^
/Users/brodie/ros2_foxy/ros2-osx/include/rclcpp/utilities.hpp:56:1: note: 'init' declared here
init(int argc, char const * const argv[], const InitOptions & init_options = InitOptions());
^
/Users/brodie/ros2_truckplatoon/src/truck/src/src/Truck.cpp:21:19: error: expected ';' after expression
    rclcpp::init()
                  ^
                  ;
1 warning and 2 errors generated.
gmake[2]: *** [CMakeFiles/truck.dir/build.make:95: CMakeFiles/truck.dir/src/src/Truck.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:97: CMakeFiles/truck.dir/all] Error 2
gmake: *** [Makefile:160: all] Error 2
